--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=172.17.0.4
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=vaper_shop
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,11 +24,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=jeal.code47@gmail.com
+MAIL_PASSWORD=34833202
+MAIL_ENCRYPTION=ssl
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
