correo electronico Contacto

--- a/.env
+++ b/.env
@@ -29,6 +29,8 @@ MAIL_PORT=465
 MAIL_USERNAME=jeal.code47@gmail.com
 MAIL_PASSWORD=34833202
 MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=jeal.code47@gmail.com
+MAIL_FROM_NAME=VAPERSHOP
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
