--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=VaPerShop
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:DCTQvFwepydkNWyURU66tLQvi/OH/yctqoPVeDkPR8Y=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=vaper_shop
+DB_USERNAME=root
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,11 +24,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=jeal.code47@gmail.com
+MAIL_PASSWORD=34833202
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=jeal.code47@gmail.com
+MAIL_FROM_NAME=VAPERSHOP
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
